feat: working w/ services

--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,3 +1,10 @@
-<p>cursos works!</p>
+<p>
+  lista de cursos do portal
+  <a [href]="portalName" target="_blank">{{ portalName }}</a>
+</p>
+
+<ul>
+  <li *ngFor="let courses of courses">{{ courses }}</li>
+</ul>
 
 <app-cursos-detalhe></app-cursos-detalhe>
