--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -109,4 +109,14 @@
   <hr />
 
   <app-meu-form></app-meu-form>
+
+  <hr />
+</section>
+
+<section class="input-output-properties">
+  <article>
+    <h3>Input/Output Properties</h3>
+
+    <app-curso [courseName]="courseName"></app-curso>
+  </article>
 </section>
