--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,12 @@
 <hr />
 
 <app-data-binding></app-data-binding>
+
+<hr />
+
+<app-life-cycle
+  [initialValue]="initialValue"
+  *ngIf="!deleteCycle"
+></app-life-cycle>
+<button (click)="handleChangeValue()">Change value</button>
+<button (click)="handleDestroyCycle()">Destroy</button>
