--- a/src/app/output-property/output-property.component.html
+++ b/src/app/output-property/output-property.component.html
@@ -1,5 +1,5 @@
 <div>
   <button class="btn btn-primary" (click)="handleDecrement()">-</button>
-  <input type="text" [value]="value" readonly />
+  <input type="text" [value]="value" readonly #inputField />
   <button class="btn btn-primary" (click)="handleIncrement()">+</button>
 </div>
