--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,8 +9,8 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/other-classes']"
-            >Other classes</a
+          <a class="nav-link" [routerLink]="['/directives']"
+            >Directives</a
           >
         </li>
       </ul>
