feat: working w/ ng-content

--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -19,3 +19,14 @@
 <hr />
 
 <app-elvis-operator></app-elvis-operator>
+
+<hr />
+
+<app-ng-content>
+  <span class="title">
+    aqui vai o titulo
+  </span>
+  <div class="body">
+    o conteudo que eu inserir dentro das tags, sera renderizado no lugar da diretiva ng-content no html. caso quisermos separar os renders, precisamos adicionar a prop select dentro do ng-content, referenciando a classe
+  </div>
+</app-ng-content>
