feat: working w/ element ref and renderer

--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -30,3 +30,7 @@
     o conteudo que eu inserir dentro das tags, sera renderizado no lugar da diretiva ng-content no html. caso quisermos separar os renders, precisamos adicionar a prop select dentro do ng-content, referenciando a classe
   </div>
 </app-ng-content>
+
+<hr>
+
+<app-custom-directives></app-custom-directives>
