--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+<div class="container py-5">
+  <router-outlet></router-outlet>
+</div>
