feat: working w/ HostListener and HostBinding

--- a/src/app/directives/custom-directives/custom-directives.component.html
+++ b/src/app/directives/custom-directives/custom-directives.component.html
@@ -1,3 +1,7 @@
 <p appYellowBackground>texto com fundo amarelo</p>
 
 <button appYellowBackground>botão com fundo amarelo</button>
+
+<hr />
+
+<p appHighlightMouse>texto com highlight com mouseOver</p>
