--- a/src/app/directives/custom-directives/custom-directives.component.html
+++ b/src/app/directives/custom-directives/custom-directives.component.html
@@ -5,3 +5,9 @@
 <hr />
 
 <p appHighlightMouse>texto com highlight com mouseOver</p>
+
+<hr />
+
+<p [appHighlight]="'blue'" [defaultColor]="'green'">
+  texto com highlight com custom colors
+</p>
