--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,13 +5,14 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/first-classes']"
-            >First classes</a
+            >first classes</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/directives']"
-            >Directives</a
-          >
+          <a class="nav-link" [routerLink]="['/directives']">directives</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/services']">services</a>
         </li>
       </ul>
     </div>
