--- a/src/app/services-classes/create-course/create-course.component.html
+++ b/src/app/services-classes/create-course/create-course.component.html
@@ -1,1 +1,10 @@
-<p>create-course works!</p>
+<h2>create course</h2>
+
+<input type="text" #inputCourse />
+<button (click)="handleAddCourse(inputCourse.value)">create</button>
+
+<h2>lista de cursos</h2>
+
+<ul>
+  <li *ngFor="let course of courses">{{ course }}</li>
+</ul>
